force-app/main/default/objects/Dynamic_Pricing_Lookup__c/Dynamic_Pricing_Lookup__c.object-meta.xml
<CustomObject>
    <description>SOX object - Custom Object</description>
    <label>Dynamic Pricing Lookup</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Dynamic Pricing Lookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Pricing Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>