force-app/main/default/objects/Dynamic_Pricing_Lookup__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Dynamic Pricing Lookups</relationshipLabel>
    <relationshipName>Dynamic_Pricing_Lookups</relationshipName>
    <type>Lookup</type>
</CustomField>