force-app/main/default/objects/Dynamic_Pricing_Lookup__c/fields/Storage_Tier__c.field-meta.xml
<CustomField>
    <fullName>Storage_Tier__c</fullName>
    <label>Storage Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 GB</fullName>
                <label>5 FEGB per user</label>
            </value>
            <value>
                <fullName>20 GB</fullName>
                <label>20 FEGB per user</label>
            </value>
            <value>
                <fullName>50 GB</fullName>
                <label>50 FEGB per user</label>
            </value>
            <value>
                <fullName>Unlimited GB</fullName>
                <label>Unlimited FEGB per user</label>
            </value>
            <value>
                <fullName>70 GB</fullName>
                <label>50 FEGB, 1 user; 5 FEGB, 4 users</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>