force-app/main/default/objects/Dynamic_Pricing_Lookup__c/fields/Storage_Tier_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Storage_Tier_Multiplier__c</fullName>
    <description>CPQ22-4836</description>
    <formula>SUBSTITUTE(TEXT(Storage_Tier__c), &apos; GB&apos;, &apos;&apos;)</formula>
    <label>Storage Tier Multiplier</label>
    <type>Text</type>
</CustomField>